--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,17 @@ button {
 }
 }
 
+.name,
+.main-nav,
+.main-nav li {
+    display: inline;
+}
+
+.name {
+    width: 240px;
+    margin: 50px 0;
+}
+
 .main-footer {
     background: #3acec2;
     padding: 1em 0;
