added side by side columns

--- a/styles.css
+++ b/styles.css
@@ -105,9 +105,17 @@ button {
     min-height: calc(100vh - 89px);
 }
 .container{
-    width: 40%;
+    width: 100%;
     max-width: 1000px;
     margin: Left;
+}
+.col{
+    display: inline-block;
+    width: 47%;
+    margin-right: -4px;
+    vertical-align: top;
+    padding-left: 1em; 
+    padding-right: 1em;
 }
 }
 
@@ -134,3 +142,4 @@ button {
     text-align: center;
     margin-top: -50px;
 }
+
