--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,51 @@
 body {
     line-height: 1.6; 
     background-color: rgb(191, 230, 176);
+    margin-bottom: 100px;
 }
+
 h1{
     color: green;
     font-weight: bold;
     font-variant: small-caps;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
+
 a{
     text-decoration: none;
     font-family: "Times New Roman", Times, serif;
 }
+
 p {
-    border: 1px solid powderblue;
-    color: blue;
-}
-/* ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+   color: blue;
 }
 
-li a {
-    display: block;
-    width: 60px;
-} */
+textarea{
+    width: 500px;
+    height: 80px;
+}
 
+button {
+    background:    #c00;
+    background:    -webkit-linear-gradient(#c00, #600);
+    background:    linear-gradient(#c00, #600);
+    border-radius: 999px;
+    color:         #f6f4f4;
+    padding:       10px 100px;
+    font:          normal 700 24px/1 "Open Sans", sans-serif;
+    text-align:    center;
+    text-shadow:   1px 1px 0 #000;
+    margin-top:10px;
+  }
+
+/*************************
+Begin Nav bar
+*************************/
 /* Add a black background color to the top navigation */
 .topnav {
     background-color: #333;
     overflow: hidden;
-    width: 95%;
+    width: 100%;
 }
 
 /* Style the links inside the navigation bar */
@@ -50,13 +64,12 @@ li a {
     color: black;
 }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-    background-color: #4CAF50;
-    color: white;
+.topnav .icon{
+    display: none;
 }
-
-/* --- Layout Containers ---*/
+/*************************
+End Nav bar
+*************************/
 
 .wrapper{    
     width: 90%;
@@ -68,73 +81,44 @@ li a {
     padding: 1em 0;
 }
 
-/*Below is Commented out in html*/
-.container {
-    position: relative; 
-    max-width: 800px; /* Maximum width */
-    margin: left; 
-
+.address{
+    display: block;
+    font: italic;
 }
 
-.container .content {
-    position: absolute; /* Position the background text */
-    bottom: 0; /* At the bottom. Use top:0 to append it to the top */
-    background: rgba(0, 0, 0, 0.5); /* Black background with 0.5 opacity */
-    color: #f1f1f1; /* Grey text */
+.container,
+.figcaption {
+    color: #333; /* Grey text */
     width: 100%; /* Full width */
     padding: 20px; /* Some padding */
+    font-size: small;
 }
-/*Above is Commented out in html*/
 
-button {
-    background:    #c00;
-    background:    -webkit-linear-gradient(#c00, #600);
-    background:    linear-gradient(#c00, #600);
-    border-radius: 999px;
-    color:         #f6f4f4;
-    padding:       10px 100px;
-    font:          normal 700 24px/1 "Open Sans", sans-serif;
-    text-align:    center;
-    text-shadow:   1px 1px 0 #000;
-    /* margin-left: 80px; */
-    margin-top:10px;
-  }
-
-/*---Media Queries ---*/
-@media (min-width: 769px) {
-.wrap {
-    min-height: calc(100vh - 89px);
+.imgTranspose:hover{
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
 }
-.container{
+.imgSize{
     width: 100%;
-    max-width: 1000px;
+    max-width: 400px;
     margin: Left;
 }
-.col{
-    display: inline-block;
-    width: 47%;
+.col {
+     display: inline-block; 
+    width: 50%;
     margin-right: -4px;
     vertical-align: top;
     padding-left: 1em; 
     padding-right: 1em;
-}
-}
+} 
 
-.name,
-.main-nav,
-.main-nav li {
-    display: inline;
-}
+  .row {
+      display: flex;
+  }
 
-.name {
-    width: 240px;
-    margin: 50px 0;
-}
-
-.main-footer {
+  .main-footer {
     background: #3acec2;
     padding: 1em 0;
-    /* height: 50px; */
     position: fixed; 
     left: 0;
     bottom: 0;
@@ -144,3 +128,70 @@ button {
     margin-top: -50px;
 }
 
+/*************************
+Media Queries
+*************************/
+@media (max-width: 769px) {
+.wrap {
+    min-height: calc(100vh - 89px);
+}
+.container{
+    width: 100%;
+    max-width: 1000px;
+    margin: Left;
+}
+.col {
+    width: 100%;
+}
+.row {
+    display: block;
+}
+textarea{
+    width: 70%;
+    height: 80px;
+}
+}
+
+@media screen and (max-width: 700px){
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon{
+        float: right;
+        display: block;
+    }
+    .myHeading{
+        font-size: 24px;
+    }
+    button{
+        width: auto;
+        padding-left: 2rem;
+        padding-right: 2rem;
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
+}
+
+@media (max-width: 700px) {
+.topnav.responsive {position: relative;}
+.topnav.responsive a icon{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+.topnav.topnav.responsive a{
+    float: none;
+    display: block;
+    text-align: left;
+}
+}
+
+@media screen and (max-width: 500px){
+
+    .myHeading{
+        font-size: 18px;
+    }
+    .imgSize{
+        width: 100%;
+        max-width: 300px;
+        margin: center;
+    }
+}
